compiler/tests/en/errors/incdec_non_lvalue.salam
// EXPECT: E013
func main:
    mut a := 1
    mut b := 2
    println (a + b)++
end
